Fix mobile controls visibility by aligning CSS with JS logic

--- a/play.css
+++ b/play.css
@@ -3261,13 +3261,13 @@ form .uiTheme {
   font-size: x-small;
 }
 
-@media (hover: none) { 
+@media (hover: none), (pointer: coarse) {
   .desktopOnly {
     display: none;
   }
 }
 
-@media not (hover: none) { 
+@media (hover: hover) and (pointer: fine) {
   .mobileOnly {
     display: none;
   }
